--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         </activity>
 
         <activity android:name=".GameInfoActivity"/>
+        <activity android:name=".GameInfoEditActivity"/>
     </application>
 
 </manifest>
